bench_err.txt
warning: use of deprecated trait `static_gen::StaticNode`: Legacy trait kept for backward compatibility. Use StaticAxon instead.
  --> core\src\lib.rs:17:71
   |
17 | ..., StaticManifest, StaticNode, StaticStateEntry,
   |                      ^^^^^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default

warning: use of deprecated function `static_gen::read_json_file`: Internal API
  --> core\src\lib.rs:18:5
   |
18 |     read_json_file, write_json_file,
   |     ^^^^^^^^^^^^^^

warning: use of deprecated function `static_gen::write_json_file`: Internal API
  --> core\src\lib.rs:18:21
   |
18 |     read_json_file, write_json_file,
   |                     ^^^^^^^^^^^^^^^

warning: `ranvier-core` (lib) generated 3 warnings
    Checking ranvier-runtime v0.7.0 (F:\project\ranvier\ranvier-workspace\ranvier\runtime)
warning: unused import: `std::sync::Arc`
 --> runtime\benches\axon_latency.rs:4:5
  |
4 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `FastTransition: Clone` is not satisfied
   --> runtime\benches\axon_latency.rs:46:44
    |
 46 |     let axon = Axon::new("fast_axon").then(FastTransition);
    |                                       ---- ^^^^^^^^^^^^^^ the trait `Clone` is not implemented for `FastTransition`
    |                                       |
    |                                       required by a bound introduced by this call
    |
note: required by a bound in `Axon::<In, Out, E, Res>::then`
   --> F:\project\ranvier\ranvier-workspace\ranvier\runtime\src\axon.rs:158:68
    |
155 |     pub fn then<Next, Trans>(self, transition: Trans) -> Axon<In, Next, E, Res>
    |            ---- required by a bound in this associated function
...
158 |         Trans: Transition<Out, Next, Resources = Res, Error = E> + Clone + Send + Sync + 'static,
    |                                                                    ^^^^^ required by this bound in `Axon::<In, Out, E, Res>::then`
help: consider annotating `FastTransition` with `#[derive(Clone)]`
    |
 26 + #[derive(Clone)]
 27 | struct FastTransition;
    |

For more information about this error, try `rustc --explain E0277`.
warning: `ranvier-runtime` (bench "axon_latency") generated 1 warning
error: could not compile `ranvier-runtime` (bench "axon_latency") due to 1 previous error; 1 warning emitted
